# fastapi-task-api

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
app/: __init__.py  main.py
app/api/: deps.py
app/api/routes/: auth.py  tasks.py
app/core/: config.py  database.py  security.py
app/crud/: task.py  user.py
app/models/: __init__.py  task.py  user.py
app/schemas/: task.py  token.py  user.py
tests/: conftest.py  test_auth.py  test_tasks.py
